perf: add critical css integration

--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.9",
     "@astrojs/check": "^0.5.10",
+    "astro": "^4.5.9",
     "typescript": "^5.4.3"
+  },
+  "devDependencies": {
+    "critical": "7.1.1"
   }
 }
