--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.9",
-    "@astrojs/check": "^0.5.10",
-    "typescript": "^5.4.3"
+    "@astrojs/check": "^0.8.2",
+    "@astrojs/mdx": "^3.1.3",
+    "@astrojs/rss": "^4.0.7",
+    "@astrojs/sitemap": "^3.1.6",
+    "astro": "^4.12.1",
+    "typescript": "^5.5.3"
   }
 }
