--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^3.1.3",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
+    "@playform/compress": "^0.0.13",
     "astro": "^4.12.1",
     "typescript": "^5.5.3"
   }
